--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {
-    "quotes": ["error", "backtick", { "avoidEscape": true }]
-  }
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
